--- a/package.json
+++ b/package.json
@@ -5,10 +5,19 @@
     "babel-loader": "^10.0.0",
     "webpack": "^5.99.6",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.1"
+    "webpack-dev-server": "^5.2.1",
+    "webpack-merge": "^6.0.1"
   },
   "scripts": {
-    "build": "webpack --config webpack.config.js",
-    "dev": "webpack serve --config webpack.config.js"
-  }
+    "start": "webpack serve --config webpack.dev.js",
+    "dev": "webpack --config webpack.dev.js && npm run start",
+    "build": "webpack --config webpack.prod.js"
+  },
+  "name": "fe",
+  "version": "1.0.0",
+  "description": "使用 tailwindcss 编译",
+  "main": "tailwind.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
